Fix footer spacing
- Add appropriate spacing for footer

--- a/styles/site.css
+++ b/styles/site.css
@@ -76,12 +76,11 @@ main {
 }
 
 footer {
-  padding: 10px 30px;
+  padding: 20px 30px;
 }
 
 footer h1 {
-  margin-top: 0;
-  margin-bottom: 25px;
+  margin: 0 0 25px 0;
 }
 
 a {
@@ -279,7 +278,6 @@ a {
   padding: 8px 12px;
 
   text-decoration: none;
-  /* font-family: monospace; */
 
   font-size: 14pt;
 
